# devtracker

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
docs/images/: README.md
infra/: docker-compose.yml
infra/docker/: api-fastapi.Dockerfile  core-django.Dockerfile  reports-flask.Dockerfile
infra/nginx/: nginx.conf
services/api-fastapi/: alembic.ini  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
services/api-fastapi/app/: main.py
services/api-fastapi/app/core/: config.py  db.py  redis.py  security.py
services/api-fastapi/app/models/: __init__.py  base.py  external.py  task.py
services/api-fastapi/app/routers/: tasks.py  (+1 more)
services/api-fastapi/migrations/: env.py
services/api-fastapi/tests/: conftest.py  test_security.py  test_tasks_crud.py  test_websocket_and_health.py
services/core-django/: entrypoint.sh  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
services/core-django/config/: celery.py  settings.py  settings_test.py  urls.py
services/core-django/tests/: conftest.py  test_admin.py  test_analytics_tasks.py  test_auth_api.py  test_models.py  test_seed_command.py
services/reports-flask/: pyproject.toml  requirements-dev.txt  requirements.txt
services/reports-flask/app/: __init__.py  auth.py  db.py  routes.py
services/reports-flask/tests/: conftest.py  test_reports.py
shared/: README.md  pyproject.toml
shared/devtracker_shared/: constants.py
tests/integration/: conftest.py  test_full_stack.py
(+22 files in other folders)
